# ChangeLog for sys-boot/calcboot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calcboot-3.82.0-r1 (24 Nov 2009)

  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calcboot-3.82.0.ebuild, +calcboot-3.82.0-r1.ebuild, +metadata.xml:
  Fix depend for ebuild of calcboot.
