@@ -2,9 +2,12 @@ AUX syslinux-3.72-nopie.patch 412 RMD160 57ff5acb7ea790bb711d4a4b1bc44ab4a94ce2a
 AUX syslinux-3.72-nostrip.patch 1230 RMD160 c22a5b7fce9aff1ef235b57133fc3a0831183bb5 SHA1 55e7bcbbfc14dc9f3f9faf48cdb2c49d0072c150 SHA256 9c32ee6f7fa24c2cbf00088963454ee8d761fed9065f5353737a97c2edc2f416
 DIST calcboot-3.75.4.tar.bz2 144044 RMD160 d859d004d3f75c37d4ef5cff762a7813bf845ad9 SHA1 dae7a42c674b6f09557838db3d664859d7b738f9 SHA256 1615409cc254e3a2960b70f04c9417bfc4cf9c67db8eec64d6c8ed9cdd702862
 DIST calcboot-3.82.0.tar.bz2 144044 RMD160 d859d004d3f75c37d4ef5cff762a7813bf845ad9 SHA1 dae7a42c674b6f09557838db3d664859d7b738f9 SHA256 1615409cc254e3a2960b70f04c9417bfc4cf9c67db8eec64d6c8ed9cdd702862
+DIST calcboot-3.83.0.tar.bz2 144076 RMD160 758be59ca9576b0632da003cf05a691eefd6cf09 SHA1 de8b1dddc086988924cbcf90e61136d5f6c69a62 SHA256 93dfbf7a0204209910bc9df5b39f6e5bfad02aaf37f41bf14ddfb69719a3373a
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
+DIST syslinux-3.83.tar.bz2 3184349 RMD160 b4cff023c44a421a5f788f4cf556b537986117f9 SHA1 0dbbdd5a36362ce0e3284d9f4047a355d527d5d0 SHA256 9ec84d6dcc188f082a875b69796b196f98ea8c0102b55b03123616a285c2d9f9
 EBUILD calcboot-3.75.4-r1.ebuild 1601 RMD160 8971ae4b694ef27b0a815b09933a8ae0c96e671c SHA1 6e641b5b202099acd0919dbbddc50375db14de06 SHA256 c53c332fc0d7e460cb2190aae916e1c1125de666d1671f9af7cc63c97f3f8934
 EBUILD calcboot-3.82.0-r1.ebuild 1600 RMD160 06be73aa11ac01867083f9b307044118708aa1e9 SHA1 21ca9d04e485a3dfda12b6d53bccfb856a033855 SHA256 2d065d9fa43c4f958de525c45c6943bdb6da6ca4bf79ddfcb1edbca541c562fe
-MISC ChangeLog 320 RMD160 307ac1e7158edc09523d4c09ab2e27ce6af10d7d SHA1 b3bbc28963639ab7fa18eae1ea7058a5a4d10977 SHA256 7c7a04455001d5a8d1d2b00b2054c3cba16c778ba41a7da6650ddbad8675f3fb
+EBUILD calcboot-3.83.0.ebuild 1600 RMD160 06be73aa11ac01867083f9b307044118708aa1e9 SHA1 21ca9d04e485a3dfda12b6d53bccfb856a033855 SHA256 2d065d9fa43c4f958de525c45c6943bdb6da6ca4bf79ddfcb1edbca541c562fe
+MISC ChangeLog 485 RMD160 ab2d0061b8854259a0efdc670ca8f397315c12d3 SHA1 0ea5cd2173d14c8465e0607ed2d7041cda6477f6 SHA256 eff4fac9cc9946c1aec79f329bededef44bc415b7f6ef3477171f1b82c4d8cd1
 MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
