@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calcboot-3.83.0 (24 Nov 2009)
+
+  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  +calcboot-3.83.0.ebuild:
+  Added calcmenu.c32 module for syslinux-3.83
+
 *calcboot-3.82.0-r1 (24 Nov 2009)
 
   24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
